<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="4.3">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="0.9"
                  android:layout_marginTop="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:layout_marginBottom="10dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="3">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/product"
                        android:id="@+id/prodTextView"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wrapping"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"/>
                </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/productEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wrappingEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:layout_weight="1"
                      android:layout_marginTop="10dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="3">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:id="@+id/textView4"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fromEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/toEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:layout_marginTop="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:weightSum="3"
                      android:layout_weight="1">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:id="@+id/textView5"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/distanceEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/oneKmEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:id="@+id/textView6"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/buyEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/mergEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/one_km_cost"
                        android:id="@+id/textView7"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/oneKmEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/weightEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/margin"
                        android:id="@+id/textView8"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/mergEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/expEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>
                </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:id="@+id/textView9"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/weightEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/default_weight"
                        android:nextFocusDown="@+id/buyEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:id="@+id/textView10"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/expEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/usdEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>
                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.2"
                  android:layout_marginTop="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usd"
                        android:id="@+id/textView11"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/usdEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:nextFocusDown="@+id/eurEditText"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:layout_weight="1">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eur"
                        android:id="@+id/textView12"
                        android:layout_weight="1"
                        android:layout_margin="5dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/eurEditText"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:textAlignment="gravity"/>
            </LinearLayout>

            </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1.2"
                  android:layout_marginTop="20dp">

        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calculate"
                android:id="@+id/button"
                android:onClick="onClick"
                android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>

